chore: cleanup and use new features from Java 17:
- use multiline strings
- use String-formatter