@@ -132,7 +132,7 @@ public class CVC5BitvectorFormulaManager
       return termManager.mkTerm(op, pNumber);
     } catch (CVC5ApiException e) {
       throw new IllegalArgumentException(
-          String.format("You tried rotation a bitvector %s with shift %d", pNumber, pToRotate), e);
+          "You tried rotation a bitvector %s with shift %d".formatted(pNumber, pToRotate), e);
     }
   }
 
@@ -143,7 +143,7 @@ public class CVC5BitvectorFormulaManager
       return termManager.mkTerm(op, pNumber);
     } catch (CVC5ApiException e) {
       throw new IllegalArgumentException(
-          String.format("You tried rotation a bitvector %s with shift %d", pNumber, pToRotate), e);
+          "You tried rotation a bitvector %s with shift %d".formatted(pNumber, pToRotate), e);
     }
   }
 
